<resources>
    <string name="app_name">Pinball Remote Controller</string>
    <string name="no_bluetooth">Sorry, your device does not support Bluetooth, you can\'t go ahead.</string>
    <string name="bluetooth_title">Please, select a paired device:</string>
    <string name="bluetooth_denied">Bluetooth activation denied, please, relaunch the app and allow Bluetooth to be activated.</string>
    <string name="no_paired_devices">There are no paired device, first pair the Bluetooth device on your mobile settings and then relaunch the app.</string>
    <string name="match_points">Match points:</string>
    <string name="default_points">3 points by default</string>
    <string name="default_scoreboard">Select match points and press start</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="connection_error">There are connection issues.</string>
    <string name="player1_wins">Player 1 wins</string>
    <string name="player2_wins">Player 2 wins</string>
    <string name="connecting">Connecting …</string>
</resources>
